# react-rag-agent

./: .gitignore  README.md  pyproject.toml
src/react_rag_agent/: agent.py  api.py  cache.py  config.py  dev.py  ingest.py  main.py  orchestrator.py  prompts.py  retrieval.py  session_store.py  tools.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: MarkdownRenderer.tsx
